update: make review parsing step on the server.wip

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <body>
         <form id="load_url" action="load_from" method="post">
             <input type="text" name="url" id="url_field" value="" placeholder="Url to google sheets page" />
+            <input type="text" name="members_list_url" id="members_url_field" value="" placeholder="Url to google sheets with members names" />
             <input type="submit" value="Load data" class="button-link"/>
         </form>
     </body>
