--- a/chart.html
+++ b/chart.html
@@ -17,30 +17,26 @@
       {        
         type: "stackedColumn",
         toolTipContent: "{label}<br/><span style='\"'color: {color};'\"'><strong>{name}</strong></span>: {y}mn tonnes",
-        name: "Anthracite and Bituminous",
+        name: "Occasionaly",
         showInLegend: "true",
         dataPoints: [
-        {  y: 111338 , label: "USA"},
-        {  y: 49088, label: "Russia" },
-        {  y: 62200, label: "China" },
-        {  y: 90085, label: "India" },
-        {  y: 38600, label: "Australia"},
-        {  y: 48750, label: "SA"}
-        
+            {  y: 2 , label: "1"},
+            {  y: 1.4, label: "2" },
+            {  y: 2, label:  "3" },
+            {  y: 2, label:   "4" },
+            {  y: 2, label:  "5"}
         ]
       },  {        
         type: "stackedColumn",
         toolTipContent: "{label}<br/><span style='\"'color: {color};'\"'><strong>{name}</strong></span>: {y}mn tonnes",
-        name: "SubBituminous and Lignite",
+        name: "Daily",
         showInLegend: "true",
         dataPoints: [
-        {  y: 135305 , label: "USA"},
-        {  y: 107922, label: "Russia" },
-        {  y: 52300, label: "China" },
-        {  y: 3360, label: "India" },
-        {  y: 39900, label: "Australia"},
-        {  y: 0, label: "SA"}
-        
+            {  y: 1 , label: "1"},
+            {  y: 1.2, label: "2" },
+            {  y: 2, label:  "3" },
+            {  y: 1, label:   "4" },
+            {  y: 1, label:  "5"}
         ]
       }            
       ]
